--- a/index.css
+++ b/index.css
@@ -1,10 +1,19 @@
-nav{
+nav {
     width: 100%;
     height: 100px;
-    
+
 }
 
-iframe{
+iframe {
     width: 100%;
     height: 100px;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    margin: 0;
 }
