--- a/index.css
+++ b/index.css
@@ -1,73 +1,16 @@
-nav {
-    width: 100%;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.flex-container{
     display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-around;
-
+    justify-content: left;
+    padding-left: 50px;
+    padding-top: 80px;
 }
 
-a {
-    color: #073B4C;
-    text-decoration: none;
-    font-family: 'Oswald';
-    font-weight: 500;
-    font-size: 20px;
-    padding: 10px 5px;
-    z-index: 1;
+p{
+    font-family: 'Montserrat';
+    font-size: 60px;
+    color: #832161;
 }
 
-li {
-    position: relative;
-    padding: 0 20px;
-    height: 100%;
-    display: flex;
+.animate__bounceInLeft{
+    --animate-duration: 3s;
 }
-
-li:before {
-    content: "";
-    position: absolute;
-    height: 35.35%;
-    width: 0;
-    background-color: #FFD166;
-    right: 0;
-    z-index: 0;
-    top: 32.32%;
-    transition: all 0.5s;
-}
-
-li:after {
-    content: "";
-    position: absolute;
-    height: 35.35%;
-    width: 0;
-    background-color: #FFD166;
-    left: 0;
-    z-index: 0;
-    bottom: 0;
-    transition: all 0.5s;
-}
-
-a:before {
-    position: absolute;
-    content: "";
-    height: 35.35%;
-    width: 0;
-    background-color: #FFD166;
-    bottom: 66.66%;
-    left: 0;
-    transition: all 0.5s;
-}
-
-li:hover:before,
-li:hover:after,
-li:hover a:before {
-    width: 100%;
-}
-
