--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 .flex-container{
     display: flex;
     justify-content: left;
-    padding-left: 50px;
-    padding-top: 80px;
 }
 
 p{
     font-family: 'Montserrat';
     font-size: 60px;
     color: #832161;
+    position: absolute;
+    margin-bottom: -200px;
 }
 
 .animate__bounceInLeft{
