--- a/gallery-two.css
+++ b/gallery-two.css
@@ -6,7 +6,7 @@
 p{
     font-family: 'Montserrat';
     font-size: 60px;
-    color:white;
+    color:rgb(172, 169, 169);
     text-align: center; 
 }
 
